--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-termcolor
-opencv-python
-selenium
-face_recognition
-WeasyPrint
-requests-html
+termcolor==3.1.0
+opencv-python==4.12.0.88
+selenium==4.35.0
+face_recognition==1.3.0
+WeasyPrint==66.0
+requests-html==0.10.0
